--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>消息配图</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://cdn.staticfile.org/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 </head>
 <body ng-app="app" ng-controller="MainController">
   <div class="container">
@@ -14,7 +15,7 @@
       <img class="img-thumbnail" ng-repeat="picture in pictures" ng-src="{{picture.thumb}}">
     </div>
   </div>
-  <script src="http://cdn.staticfile.org/angular.js/1.2.1/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular.min.js"></script>
   <script src="MainController.js"></script>
 </body>
 </html>
