验证新浪微博站点

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>消息配图</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="wb:webmaster" content="fbc6e7fd0741ed59" />
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="style.css">
@@ -27,6 +28,7 @@
     </div>
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular.min.js"></script>
+  <script src=" http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=3168919025" type="text/javascript" charset="utf-8"></script>
   <script src="MainController.js"></script>
 </body>
 </html>
