--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form ng-submit="updateImage()">
       <div class="row">
         <div class="col-sm-10">
-          <input class="form-control" placeholder="输入你想发的消息" ng-model="message">
+          <input class="form-control" placeholder="输入你想发的消息" required ng-model="message">
         </div>
         <div class="col-sm-2">
           <button class="btn btn-default btn-block">搜索配图</button>
